# weather-cli

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
src/: command.rs  config.rs  forecast.rs  main.rs  provider.rs  provider_loader.rs
src/command/: configure.rs  get.rs
src/provider/: open_weather.rs  weather_api.rs
src/provider_loader/: json_loader.rs
