[package]
name = "weather"
version = "0.1.0"
edition = "2021"
authors = ["Volodymyr Antonov <azazaka2002@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"] }
enum_dispatch = "0.3.11"
eyre = "0.6.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.40"
